add company as a required param
