# controllers/watch.go
@@ -14,19 +14,21 @@ type WatchController struct{}
 // @ID checkin
 // @Produce json
 // @Tags Watcher
+// @Param company_id path string true "Company ID"
 // @Param employee_id path string true "Employee ID"
 // @Param password path string true "Employee Password"
-// @Router /v1/watcher/checkin/{employee_id}/{password} [get]
+// @Router /v1/watcher/checkin/{company_id}/{employee_id}/{password} [get]
 func (h WatchController) CheckIn(c *gin.Context) {
-	company := c.Query("company")
+	company := c.Param("company")
 	user := c.Param("username")
 	pass := c.Param("password")
+
 	_, err := watcher.CheckIn(user, pass, watcher.WithCompany(company))
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"success": true, "operation": "checkin", "user": user})
+	c.JSON(http.StatusOK, gin.H{"success": true, "operation": "checkin", "company": company, "user": user})
 }
 
 // WatchController godoc
@@ -36,11 +38,12 @@ func (h WatchController) CheckIn(c *gin.Context) {
 // @ID checkout
 // @Tags Watcher
 // @Produce json
+// @Param company_id path string true "Company ID"
 // @Param employee_id path string true "Employee ID"
 // @Param password path string true "Employee Password"
-// @Router /v1/watcher/checkout/{employee_id}/{password} [get]
+// @Router /v1/watcher/checkout/{company_id}/{employee_id}/{password} [get]
 func (h WatchController) CheckOut(c *gin.Context) {
-	company := c.Query("company")
+	company := c.Param("company")
 	user := c.Param("username")
 	pass := c.Param("password")
 	_, err := watcher.CheckOut(user, pass, watcher.WithCompany(company))
@@ -48,5 +51,5 @@ func (h WatchController) CheckOut(c *gin.Context) {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"success": true, "operation": "checkout", "user": user})
+	c.JSON(http.StatusOK, gin.H{"success": true, "operation": "checkout", "company": company, "user": user})
 }
