# server/router.go
@@ -20,8 +20,8 @@ func NewRouter() *gin.Engine {
 		watcherGroup := v1.Group("watcher")
 		{
 			watcher := new(controllers.WatchController)
-			watcherGroup.GET("checkin/:username/:password", watcher.CheckIn)
-			watcherGroup.GET("checkout/:username/:password", watcher.CheckOut)
+			watcherGroup.GET("checkin/:company/:username/:password", watcher.CheckIn)
+			watcherGroup.GET("checkout/:company/:username/:password", watcher.CheckOut)
 		}
 	}
 	return router
